Core changed in the game loop by adding Game modes. Still some errors in the menu (from option to partie). Some black screen flash are still present and due to drawing taking some time => plan to do active rendering for better performance